Fix partner spacing

--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ p.desc {
   font-family: "Montserrat", sans-serif;
   /* font-weight: normal; */
   line-height: 25px;
+  padding-bottom: 0px;
   margin-bottom: -30px;
  
 }
